--- a/src/components/Popup/style.module.scss
+++ b/src/components/Popup/style.module.scss
@@ -16,7 +16,7 @@ $maxHeiht: 80vh;
         display: flex;
         justify-content: center;
         max-height: calc(80vh - 125px);
-        min-height: 400px;
+        // min-height: 400px;
         max-width: $maxWidth;
     }
     .button {
